Handle inactive document in IdleSpellCheckCallback

IdleSpellCheckCallback asserts that the document is active when the
callback is invoked, which is not true.

This patch changes the assertion into aborting on inactive document.

Bug: 793964
Change-Id: I4ff65ba1bdb8a7cc7f14a1fbbea2be90a337f745
Reviewed-on: https://chromium-review.googlesource.com/820604
Reviewed-by: Xianzhu Wang <wangxianzhu@chromium.org>
Commit-Queue: Xiaocheng Hu <xiaochengh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#523325}
Former-commit-id: 08207a070a276132fdfcfdae556d4b72b66f7453