third_party/WebKit/Source/core/editing/spellcheck/IdleSpellCheckCallback.cpp
@@ -167,8 +167,11 @@ void IdleSpellCheckCallback::HotModeInvocation(IdleDeadline* deadline) {
 }
 
 void IdleSpellCheckCallback::invoke(IdleDeadline* deadline) {
-  DCHECK(GetFrame().GetDocument());
-  DCHECK(GetFrame().GetDocument()->IsActive());
+  // TODO(xiaochengh): IdleSpellCheckCallback should get Document via
+  // SynchronousMutationObserver::GetContext().
+  if (!GetFrame().GetDocument() || !GetFrame().GetDocument()->IsActive())
+    return;
+
   DCHECK_NE(idle_callback_handle_, kInvalidHandle);
   idle_callback_handle_ = kInvalidHandle;
 
